# kisee

./: .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  example-settings.toml  example-settings.yaml  jwt-read.py  kisee.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: api.rst  conf.py  contributing.rst  faq.rst  features.rst  index.rst  installing.rst  settings.rst
kisee/: __init__.py  __main__.py  authentication.py  emails.py  identity_provider.py  kisee.py  middlewares.py  quickstart.py  serializers.py  utils.py  views.py
kisee/providers/: demo.py  dumb.py  test.py
postgres_backend/: pgsql.py  schema_01.sql
src/dumbidbackend/: dumb.py
src/idserver/: __main__.py  serializers.py  views.py
src/idserver/utils/: module_loading.py
src/shape/: mysql.py
src/shapeidp/: __main__.py  identity_provider.py  kisee.py  serializers.py  views.py
src/shapeidp/utils/: module_loading.py
tests/: conftest.py  mocks.py  test_as_absolute.py  test_authentication.py  test_dumb.py  test_heath.py  test_idp.py  test_mail.py  test_main.py  test_middlewares.py  test_mysql.py  test_password_recovery.py  test_patch.py  test_quickstart.py  test_serializers.py  test_settings.toml  test_views.py
