[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "kisee"
author = "Julien Palard"
author-email = "julien@python.org"
home-page = "https://github.com/meltygroup/kisee"
requires = [
    "aiohttp",
    "aiohttp-cors",
    "aiomysql",
    "asyncpg",
    "bcrypt",
    "cryptography",
    "psutil",
    "pyjwt",
    "sentry-sdk>=0.13.2",
    "aiocontextvars",
    "shortuuid",
    "toml",
]
description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"

[tool.flit.scripts]
kisee = "kisee.kisee:main"
kisee-quickstart = "kisee.quickstart:main"
