[metadata]
name = kisee
# Format is YY.MM.patch (see https://calver.org/)
version = attr: kisee.__version__
description = HTTP server managing identities
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/meltygroup/kisee
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >= 3.6
install_requires =
  aiocontextvars
  aiohttp
  aiohttp-cors
  aiojobs
  aiomysql
  asyncpg
  bcrypt
  cryptography
  httpserializers
  jsonpatch
  pyjwt[crypto]>=2.0.0
  requests  # To avoid a conflict with idna dependency in dev requirements.
  shortuuid
  toml
  werkzeug

[options.entry_points]
console_scripts =
  kisee=kisee.kisee:main
  kisee-quickstart=kisee.quickstart:main
